src/test/ui/match/match-pattern-field-mismatch.stderr
error[E0023]: this pattern has 2 fields, but the corresponding tuple variant has 3 fields
  --> $DIR/match-pattern-field-mismatch.rs:10:11
   |
LL |           Color::Rgb(_, _) => { }
   |           ^^^^^^^^^^^^^^^^ expected 3 fields, found 2

error: aborting due to previous error

For more information about this error, try `rustc --explain E0023`.
